fix: rename add to set for env vars
